# vsystemmonitor

./: Cargo.toml  README.md  tz_tui_rust_monitor.md
assets/: config.example.toml
src/: app.rs  config.rs  main.rs  model.rs  navigation.rs  theme.rs  ui.rs
src/collector/: disks.rs  local.rs  mod.rs  remote.rs
