[package]
name = "vsysmonitor"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Terminal UI system monitor for Linux with architecture prepared for remote hosts"
repository = "https://github.com/example/vsysmonitor"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
sysinfo = "0.29"
toml = "0.8"
